force-app/main/default/objects/Holder_Structure__c/Holder_Structure__c.object-meta.xml
<CustomObject>
    <label>Holder Structure</label>
    <nameField>
        <displayFormat>HS# {0000000000}</displayFormat>
        <label>Holder Structure#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holder Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>