force-app/main/default/objects/Holder_Structure__c/fields/Accessory_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Type_Code__c</fullName>
    <label>Accessory Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>