force-app/main/default/objects/Holder_Structure__c/fields/Additional_Code__c.field-meta.xml
<CustomField>
    <fullName>Additional_Code__c</fullName>
    <label>Additional Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>