force-app/main/default/objects/Holder_Structure__c/fields/AutoEyebolt__c.field-meta.xml
<CustomField>
    <fullName>AutoEyebolt__c</fullName>
    <label>AutoEyebolt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>