force-app/main/default/objects/Holder_Structure__c/fields/BodySC__c.field-meta.xml
<CustomField>
    <fullName>BodySC__c</fullName>
    <label>BodySC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>