force-app/main/default/objects/Holder_Structure__c/fields/CapscrewSC__c.field-meta.xml
<CustomField>
    <fullName>CapscrewSC__c</fullName>
    <label>CapscrewSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>