force-app/main/default/objects/Holder_Structure__c/fields/ClampSC__c.field-meta.xml
<CustomField>
    <fullName>ClampSC__c</fullName>
    <label>ClampSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>