force-app/main/default/objects/Holder_Structure__c/fields/CompanionFlangeSC__c.field-meta.xml
<CustomField>
    <fullName>CompanionFlangeSC__c</fullName>
    <label>CompanionFlangeSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>