force-app/main/default/objects/Holder_Structure__c/fields/Component_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Component_Part_Number__c</fullName>
    <label>Component Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>