force-app/main/default/objects/Holder_Structure__c/fields/Component_Scrap__c.field-meta.xml
<CustomField>
    <fullName>Component_Scrap__c</fullName>
    <label>Component Scrap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>