force-app/main/default/objects/Holder_Structure__c/fields/CompPTC__c.field-meta.xml
<CustomField>
    <fullName>CompPTC__c</fullName>
    <label>CompPTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>