force-app/main/default/objects/Holder_Structure__c/fields/EyeboltsSC__c.field-meta.xml
<CustomField>
    <fullName>EyeboltsSC__c</fullName>
    <label>EyeboltsSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>