force-app/main/default/objects/Holder_Structure__c/fields/GasketSC__c.field-meta.xml
<CustomField>
    <fullName>GasketSC__c</fullName>
    <label>GasketSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>