force-app/main/default/objects/Holder_Structure__c/fields/Gauge_Selection__c.field-meta.xml
<CustomField>
    <fullName>Gauge_Selection__c</fullName>
    <label>Gauge Selection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>