force-app/main/default/objects/Holder_Structure__c/fields/Gauge_Selection_Mid_Flange__c.field-meta.xml
<CustomField>
    <fullName>Gauge_Selection_Mid_Flange__c</fullName>
    <label>Gauge Selection Mid Flange</label>
    <length>255</length>
    <type>Text</type>
</CustomField>