force-app/main/default/objects/Holder_Structure__c/fields/GaugeSC__c.field-meta.xml
<CustomField>
    <fullName>GaugeSC__c</fullName>
    <label>GaugeSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>