force-app/main/default/objects/Holder_Structure__c/fields/Holder_Structure_Type__c.field-meta.xml
<CustomField>
    <fullName>Holder_Structure_Type__c</fullName>
    <label>Holder Structure Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>