force-app/main/default/objects/Holder_Structure__c/fields/INLETCOMPPTC__c.field-meta.xml
<CustomField>
    <fullName>INLETCOMPPTC__c</fullName>
    <label>INLETCOMPPTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>