force-app/main/default/objects/Holder_Structure__c/fields/InletSC__c.field-meta.xml
<CustomField>
    <fullName>InletSC__c</fullName>
    <label>InletSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>