force-app/main/default/objects/Holder_Structure__c/fields/JackscrewSC__c.field-meta.xml
<CustomField>
    <fullName>JackscrewSC__c</fullName>
    <label>JackscrewSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>