force-app/main/default/objects/Holder_Structure__c/fields/LeadtimeSchedule__c.field-meta.xml
<CustomField>
    <fullName>LeadtimeSchedule__c</fullName>
    <label>LeadtimeSchedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>