force-app/main/default/objects/Holder_Structure__c/fields/Material_Sourcing_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Material_Sourcing_Requirements__c</fullName>
    <label>Material Sourcing Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>