force-app/main/default/objects/Holder_Structure__c/fields/MCCF__c.field-meta.xml
<CustomField>
    <fullName>MCCF__c</fullName>
    <label>MCCF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>