force-app/main/default/objects/Holder_Structure__c/fields/MCCLMP__c.field-meta.xml
<CustomField>
    <fullName>MCCLMP__c</fullName>
    <label>MCCLMP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>