force-app/main/default/objects/Holder_Structure__c/fields/MCEYEBOLT__c.field-meta.xml
<CustomField>
    <fullName>MCEYEBOLT__c</fullName>
    <label>MCEYEBOLT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>