force-app/main/default/objects/Holder_Structure__c/fields/MCHG__c.field-meta.xml
<CustomField>
    <fullName>MCHG__c</fullName>
    <label>MCHG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>