force-app/main/default/objects/Holder_Structure__c/fields/MCHI__c.field-meta.xml
<CustomField>
    <fullName>MCHI__c</fullName>
    <label>MCHI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>