force-app/main/default/objects/Holder_Structure__c/fields/MCHN__c.field-meta.xml
<CustomField>
    <fullName>MCHN__c</fullName>
    <label>MCHN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>