force-app/main/default/objects/Holder_Structure__c/fields/MCHO__c.field-meta.xml
<CustomField>
    <fullName>MCHO__c</fullName>
    <label>MCHO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>