force-app/main/default/objects/Holder_Structure__c/fields/MCHRNG__c.field-meta.xml
<CustomField>
    <fullName>MCHRNG__c</fullName>
    <label>MCHRNG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>