force-app/main/default/objects/Holder_Structure__c/fields/MCKBLD__c.field-meta.xml
<CustomField>
    <fullName>MCKBLD__c</fullName>
    <label>MCKBLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>