force-app/main/default/objects/Holder_Structure__c/fields/MCMFLG__c.field-meta.xml
<CustomField>
    <fullName>MCMFLG__c</fullName>
    <label>MCMFLG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>