force-app/main/default/objects/Holder_Structure__c/fields/MCSTUD__c.field-meta.xml
<CustomField>
    <fullName>MCSTUD__c</fullName>
    <label>MCSTUD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>