force-app/main/default/objects/Holder_Structure__c/fields/MidFlangeSC__c.field-meta.xml
<CustomField>
    <fullName>MidFlangeSC__c</fullName>
    <label>MidFlangeSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>