force-app/main/default/objects/Holder_Structure__c/fields/NutSC__c.field-meta.xml
<CustomField>
    <fullName>NutSC__c</fullName>
    <label>NutSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>