force-app/main/default/objects/Holder_Structure__c/fields/OBDesc__c.field-meta.xml
<CustomField>
    <fullName>OBDesc__c</fullName>
    <label>OBDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>