force-app/main/default/objects/Holder_Structure__c/fields/OUTLETCOMPPTC__c.field-meta.xml
<CustomField>
    <fullName>OUTLETCOMPPTC__c</fullName>
    <label>OUTLETCOMPPTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>