force-app/main/default/objects/Holder_Structure__c/fields/OutletSC__c.field-meta.xml
<CustomField>
    <fullName>OutletSC__c</fullName>
    <label>OutletSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>