force-app/main/default/objects/Holder_Structure__c/fields/PhysicalProps__c.field-meta.xml
<CustomField>
    <fullName>PhysicalProps__c</fullName>
    <label>PhysicalProps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>