force-app/main/default/objects/Holder_Structure__c/fields/PressUnits__c.field-meta.xml
<CustomField>
    <fullName>PressUnits__c</fullName>
    <label>PressUnits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>