force-app/main/default/objects/Holder_Structure__c/fields/Qty_Per_Assembly__c.field-meta.xml
<CustomField>
    <fullName>Qty_Per_Assembly__c</fullName>
    <label>Qty Per Assembly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>