force-app/main/default/objects/Holder_Structure__c/fields/ReducerBushingSelection__c.field-meta.xml
<CustomField>
    <fullName>ReducerBushingSelection__c</fullName>
    <label>ReducerBushingSelection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>