force-app/main/default/objects/Holder_Structure__c/fields/RingSC__c.field-meta.xml
<CustomField>
    <fullName>RingSC__c</fullName>
    <label>RingSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>