force-app/main/default/objects/Holder_Structure__c/fields/ROP__c.field-meta.xml
<CustomField>
    <fullName>ROP__c</fullName>
    <label>ROP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>