force-app/main/default/objects/Holder_Structure__c/fields/Scrap_Factor__c.field-meta.xml
<CustomField>
    <fullName>Scrap_Factor__c</fullName>
    <label>Scrap Factor%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>