force-app/main/default/objects/Holder_Structure__c/fields/StudsSC__c.field-meta.xml
<CustomField>
    <fullName>StudsSC__c</fullName>
    <label>StudsSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>