force-app/main/default/objects/Holder_Structure__c/fields/Testing_Code__c.field-meta.xml
<CustomField>
    <fullName>Testing_Code__c</fullName>
    <label>Testing Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>