force-app/main/default/objects/Holder_Structure__c/fields/TubeCaseMatl__c.field-meta.xml
<CustomField>
    <fullName>TubeCaseMatl__c</fullName>
    <label>TubeCaseMatl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>